# NeuroSoft

./: .gitignore  .mcp.json  AUDIT_2026-05-26.md  AUDIT_2026-06-03.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN_MAESTRO_DESARROLLO.md  README.md  admin_license_app.py  build.py  build_installer.py  build_license_admin.py  config_optimizada.spec  generate_license.py  launcher.py  license_admin.spec  neurosoft.spec  requirements-desktop.txt
neurosoft-backend/: .coverage  .dockerignore  .env.example  CLAUDE.md  Dockerfile  alembic.ini  build_protected.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
neurosoft-backend/alembic/: env.py
neurosoft-backend/alembic/versions/: 001_initial_schema.py  002_add_row_version_hc.py  003_patient_archive_fields_and_baremo_version.py  004_acompanante_hipotesis_accesibilidad.py  005_therapy_tasks.py  006_ai_logs.py  007_patient_via_atencion.py  008_appointment_rips_fields.py  009_codigo_cie11.py  010_patient_etiquetas.py  011_config_backup_schedule.py  012_consent_hybrid.py
neurosoft-backend/app/: main.py
neurosoft-backend/app/core/: branding.py  config.py  config_institucion.py  error_codes.py  exceptions.py  logging_redactor.py  request_context.py  score_bounds.py  upload_validation.py  utils.py  validators.py
neurosoft-backend/app/infrastructure/: backup.py  consent_pdf.py  crypto.py  desktop_auto_update.py  email_service.py  export_service.py  frontend_paths.py  hc_pdf_service.py  install_agreement.py  legacy_import_service.py  license_manager.py  ollama_bootstrap.py  rehab_pdf_service.py  report_service.py  retencion.py  rips_service.py  scheduler_service.py  stimuli_bootstrap.py
neurosoft-backend/app/presentation/: dependencies.py
neurosoft-backend/data/: .ollama_install_attempted  BD_NEURO_MAESTRA.backup-pre-auditoria-excel.json  BD_NEURO_MAESTRA.backup-pre-consolidacion-duplicados.json  BD_NEURO_MAESTRA.backup-pre-limpieza-tmt.json  BD_NEURO_MAESTRA.json  e2e_test.db-shm  e2e_test.db-wal  last_update.json  neuronorma_extraido.json  neurosoft.db-shm  neurosoft.db-wal
neurosoft-backend/data/aprender/: manifest.json  paths.json
neurosoft-backend/data/audit_reports/: report_20260603_175654.json  report_20260603_175909.json
neurosoft-backend/data/baremos/: README.md
neurosoft-backend/data/protocols/: protocolo_adulto_joven.json  protocolo_ninos_complementario.json
neurosoft-backend/data/stimuli_assets/: stimuli_manifest.json
neurosoft-backend/docs/: AUDITORIA_BAREMOS_DETALLADA.md  COBERTURA_TESTS_CLINICOS.md  PRIORIDAD4_RESUMEN.md  RESUMEN_EJECUTIVO_FINAL.md  RESUMEN_FINAL_COMPLETO.md  RESUMEN_TRABAJO_COMPLETADO.md
neurosoft-backend/scripts/: audit_baremos_18.py  backup_cli.py  fix_bd_f7_2.py  fix_reservorio_encoding.py  generate_20_clinical_cases.py  generate_5_edge_cases.py  test_8_profiles.py  test_8_profiles_report.json  test_ui_endpoints.py
neurosoft-backend/tests/: conftest.py
neurosoft-backend/tests/integration/: test_api_alignment_jun2026.py  test_api_endpoints.py  test_audit_phi.py  test_auth_service.py  test_baremos_admin.py  test_casos_ground_truth.py  test_clinical_access_audit.py  test_clinical_extras.py  (+27 more)
(+590 files in other folders)
