[project]
name = "neurosoft-backend"
version = "2026.05"
description = "Sistema de evaluación neuropsicológica clínica — Backend"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "E701",     # multiple statements on one line (common in this codebase)
    "E402",     # module import not at top (lazy imports are intentional)
    "B008",     # do not perform function calls in argument defaults (FastAPI Depends)
    "C901",     # too complex (some clinical strategies are inherently complex)
    "W191",     # indentation contains tabs
    "W293",     # blank line with whitespace
    "ARG001",   # unused function argument (common in strategy pattern)
    "ARG002",   # unused method argument
    "ARG004",   # unused static method argument
    "ARG005",   # unused lambda argument
    "SIM108",   # use ternary operator (readability preference)
    "SIM105",   # use contextlib.suppress (try/except/pass is clearer in some cases)
    "SIM117",   # use single with statement (nested is sometimes clearer)
    "SIM118",   # use `key in dict` instead of `key in dict.keys()`
    "SIM102",   # collapsible if (sometimes clearer separate)
    "SIM115",   # open file with context handler (sometimes not needed)
    "SIM222",   # expr or true (intentional in some cases)
    "UP007",    # use X | Y for type annotations (keep Optional for clarity)
    "UP035",    # deprecated import (some are intentional for compatibility)
    "UP045",    # non-pep604 annotation optional
    "C408",     # unnecessary dict() call (dict() with kwargs is readable)
    "C416",     # unnecessary list comprehension (sometimes clearer)
    "B007",     # loop control variable not used (common in enumeration)
    "B904",     # raise from e (not always needed)
    "B905",     # zip without explicit strict
    "B028",     # no explicit stacklevel keyword argument
    "F601",     # multi-value repeated key literal (intentional in some cases)
    "E741",     # ambiguous variable name (l, O, I)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ARG",      # unused arguments common in test fixtures
    "B011",     # assert False (intentional in tests)
]
"app/infrastructure/report_service.py" = [
    "E501",     # PDF generation has long lines
]
"app/domain/clinical_engine/strategies.py" = [
    "C901",     # clinical strategies are inherently complex
]
"app/infrastructure/license_manager.py" = [
    "SIM103",   # readability preference over negated condition
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["app"]
